# guilded-rs

./: .gitignore  Cargo.toml  README.md
docs/: API TODO.md  Doc corrections.md
src/: bans.rs  channel.rs  docs.rs  error.rs  forums.rs  groups.rs  lib.rs  list.rs  member.rs  message.rs  reactions.rs  roles.rs  social.rs  xp.rs
