[package]
name = "guilded-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
async-stream = "0.3.3"
chrono = { version = "0.4.19", features = ["serde"] }
dotenv = "0.15.0"
reqwest = { version = "0.11.10", features = ["json"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
thiserror = "1.0.31"
tokio = { version = "1.18.1", features = ["full"] }
tokio-stream = "0.1.8"
uuid = { version = "1.0.0", features = ["serde"] }
